# monument_parser

./: Cargo.toml  README.md  test_file.txt
src/: lib.rs  main.rs
tests/: tests_parser.rs
