[package]
name = "monument_parser"
authors = ["RickNeelee"]
description = "Parser for the register of cultural monuments of Ukraine."
version = "1.0.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
clap = "3.0.0"